// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > :content[slot/function] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-content-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Avatar > :content[slot/function] 2`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="src"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </span>
</div>
`;

exports[`Avatar > :content[string] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    content
  </span>
</div>
`;

exports[`Avatar > :default[slot/function] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-default-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Avatar > :default[slot/function] 2`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="src"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </span>
</div>
`;

exports[`Avatar > :default[string] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    default
  </span>
</div>
`;

exports[`Avatar > :shape['circle'] 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar > :shape['round'] 1`] = `
<div
  class="t-avatar t-avatar--round"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar > chore: icon only 1`] = `
<div
  class="t-avatar t-avatar--circle t-avatar__icon"
>
  
  user
  
  
</div>
`;

exports[`AvatarGroup > :cascading['left-up'] 1`] = `
<div
  class="t-avatar-group t-avatar--offset-left"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup > :cascading['right-up'] 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup > :collapseAvatar[slot/Function] 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      
      <span
        class="custom-collapse-node"
      >
        +2
      </span>
      
      
    </span>
  </div>
  
  
</div>
`;

exports[`AvatarGroup > :collapseAvatar[slot/Function] 2`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-size-s t-avatar--circle"
  >
    <span>
      
      TD
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      <span
        class="custom-collapse-node"
      >
        +1
      </span>
      
    </span>
  </div>
  
  
</div>
`;

exports[`AvatarGroup > :collapseAvatar[string] 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
</div>
`;
